--- a/00 Boilerplate/index.html
+++ b/00 Boilerplate/index.html
@@ -9,28 +9,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <h4>Add contact</h4>
-        <form id="formContact" class="form-inline">
-          <fieldset class="row">
-            <div class="col-sm-12">
-              <div class="form-group">
-                <label for="txtName" class="control-label">Full name</label>
-                <input id="txtName" name="txtName" type="text" class="form-control" required>
-              </div>
-              <div class="form-group">
-                <label for="txtPhone" class="control-label">Phone number</label>
-                <input id="txtPhone" name="txtPhone" type="tel" class="form-control" required>
-              </div>
-              <div class="form-group">
-                <label for="txtEmail" class="control-label">Email</label>
-                <input id="txtEmail" name="txtEmail" type="email" class="form-control" required>
-              </div>
-              <div class="form-group">
-                <button class="btn btn-primary">Create contact</button>
-              </div>
-            </div>
-          </fieldset>
-        </form>
+        <h2>Address Book</h2>
       </header>
       <main class="main">
         <h4>My contacts</h4>
