--- a/02 Props and Render/index.html
+++ b/02 Props and Render/index.html
@@ -26,7 +26,7 @@
                 <input id="txtEmail" name="txtEmail" type="email" class="form-control" required>
               </div>
               <div class="form-group">
-                <button class="btn btn-primary">Create contact</button>
+                <button class="btn btn-primary">Add contact</button>
               </div>
             </div>
           </fieldset>
