--- a/03 Stateful Component/index.html
+++ b/03 Stateful Component/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Boilerplate</title>
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./dist/css/styles.css">
   </head>
   <body>
     <div class="container">
@@ -42,12 +42,12 @@
     <script src="./node_modules/react/dist/react.js"></script>
     <script src="./node_modules/react-dom/dist/react-dom.js"></script>
 
-    <script src="./assets/js/app/plugins/jquery-react.js"></script>
+    <script src="./dist/js/app/plugins/jquery-react.js"></script>
 
-    <script src="./assets/js/app/App.js"></script>
-    <script src="./assets/js/app/components/TableComponent.js"></script>
-    <script src="./assets/js/app/services/contactsService.js"></script>
-    <script src="./assets/js/app/modules/contactsModule.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="./dist/js/app/App.js"></script>
+    <script src="./dist/js/app/components/TableComponent.js"></script>
+    <script src="./dist/js/app/services/contactsService.js"></script>
+    <script src="./dist/js/app/modules/contactsModule.js"></script>
+    <script src="./dist/js/index.js"></script>
   </body>
 </html>
