- Changed `ContactsTableComponent` to stateless. - Added `ContactsTableContainer`, stateful component. - Updated README.md with applied changes.

--- a/03 Stateful Component/index.html
+++ b/03 Stateful Component/index.html
@@ -48,6 +48,7 @@
     <script src="./dist/js/app/components/ContactPropTypes.js"></script>
     <script src="./dist/js/app/components/ContactRowComponent.js"></script>
     <script src="./dist/js/app/components/ContactsTableComponent.js"></script>
+    <script src="./dist/js/app/components/ContactsTableContainer.js"></script>
     <script src="./dist/js/app/services/contactsService.js"></script>
     <script src="./dist/js/app/modules/contactsModule.js"></script>
     <script src="./dist/js/index.js"></script>
