--- a/04 Event Emitters/index.html
+++ b/04 Event Emitters/index.html
@@ -48,6 +48,7 @@
     <script src="./dist/js/app/components/ContactPropTypes.js"></script>
     <script src="./dist/js/app/components/ContactRowComponent.js"></script>
     <script src="./dist/js/app/components/ContactsTableComponent.js"></script>
+    <script src="./dist/js/app/components/ContactsTableContainer.js"></script>
     <script src="./dist/js/app/services/contactsService.js"></script>
     <script src="./dist/js/app/modules/contactsModule.js"></script>
     <script src="./dist/js/index.js"></script>
