--- a/05.A Angular controllerAS & directive/index.html
+++ b/05.A Angular controllerAS & directive/index.html
@@ -12,24 +12,19 @@
       <h1 class="text-center">controllerAS syntax + react-component</h1>
     </header>
     <main class="container">
-      <section>
-        <div ng-controller="Main as ctrl">
-          <form class="col-md-5" action="#" ng-submit="ctrl.encode($event)">
-            <h3>Base64 encoder</h3>
-            <div class="form-group">
-              <label for="txtMessage">Encode a text</label>
-              <input type="text" class="form-control" id="txtMessage" ng-model="ctrl.text" placeholder="Message to encode">
-            </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block">Encode</button>
-            </div>
-          </form>
-          <div class="col-md-8">
-            <react-component
-              name="ShowEncoded"
-              props="{encoded: ctrl.encodedText}"
-              watch-depth="reference" />
+      <section ng-controller="Main as ctrl">
+        <form class="col-md-5" action="#" ng-submit="ctrl.encode($event)">
+          <h3>Base64 encoder</h3>
+          <div class="form-group">
+            <label for="txtMessage">Encode a text</label>
+            <input type="text" class="form-control" id="txtMessage" ng-model="ctrl.text" placeholder="Message to encode">
           </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Encode</button>
+          </div>
+        </form>
+        <div class="col-md-8">
+          <react-component name="ShowEncoded" props="{encoded: ctrl.encodedText}" watch-depth="reference" />
         </div>
       </section>
     </main>
