--- a/05.B Angular controllerAS & factory/index.html
+++ b/05.B Angular controllerAS & factory/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1 class="text-center">controllerAS syntax + react-component</h1>
+      <h1 class="text-center">controllerAS syntax + reactDirective</h1>
     </header>
     <main class="container">
       <section ng-controller="Main as ctrl">
