--- a/05.C Angular components & directive/index.html
+++ b/05.C Angular components & directive/index.html
@@ -8,29 +8,13 @@
     <link rel="stylesheet" href="./dist/css/styles.css">
   </head>
   <body>
-    <header>
-      <h1 class="text-center">Component based + react-component</h1>
-    </header>
-    <main class="container">
-      <div class="col-sm-8">
-        <accordion>
-          <accordion-pane heading="Panel 1">
-            <h4>Panel 1 content</h4>
-          </accordion-pane>
-          <accordion-pane heading="Panel 2">
-            <h4>Panel 2 content</h4>
-          </accordion-pane>
-          <accordion-pane heading="Panel 3">
-            <h4>Panel 3 content</h4>
-          </accordion-pane>
-        </accordion>
-      </div>
-    </main>
+    <page-content/>
     <script src="./node_modules/angular/angular.js"></script>
     <script src="./node_modules/react/dist/react.js"></script>
     <script src="./node_modules/react-dom/dist/react-dom.js"></script>
     <script src="./node_modules/ngreact/ngReact.js"></script>
     <script src="./dist/app.module.js"></script>
+    <script src="./dist/components/page-content/page-content.js"></script>
     <script src="./dist/components/accordion/accordion.js"></script>
     <script src="./dist/components/accordion/accordion-panel/accordion-panel.js"></script>
   </body>
