--- a/01.B Move To JSX/index.html
+++ b/01.B Move To JSX/index.html
@@ -18,8 +18,9 @@
     </div>
 
     <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/react/dist/react.js"></script>
-    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="./node_modules/prop-types/prop-types.js"></script>
 
     <script src="./dist/js/app/App.js"></script>
     <script src="./dist/js/app/components/ContactPropTypes.js"></script>
