--- a/02 Props and Render/index.html
+++ b/02 Props and Render/index.html
@@ -39,8 +39,9 @@
     </div>
 
     <script src="./node_modules/jquery/dist/jquery.js"></script>
-    <script src="./node_modules/react/dist/react.js"></script>
-    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="./node_modules/prop-types/prop-types.js"></script>
 
     <script src="./dist/js/app/plugins/jquery-react.js"></script>
 
