--- a/05.B Angular controllerAS & factory/index.html
+++ b/05.B Angular controllerAS & factory/index.html
@@ -29,8 +29,9 @@
       </section>
     </main>
     <script src="./node_modules/angular/angular.js"></script>
-    <script src="./node_modules/react/dist/react.js"></script>
-    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="./node_modules/prop-types/prop-types.js"></script>
     <script src="./node_modules/ngreact/ngReact.js"></script>
     <script src="./dist/app.module.js"></script>
     <script src="./dist/controllers/main.controller.js"></script>
