--- a/05.C Angular components & directive/index.html
+++ b/05.C Angular components & directive/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <title>05.A Angular integration</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./dist/css/styles.css">
   </head>
   <body>
     <page-content/>
     <script src="./node_modules/angular/angular.js"></script>
-    <script src="./node_modules/react/dist/react.js"></script>
-    <script src="./node_modules/react-dom/dist/react-dom.js"></script>
+    <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="./node_modules/prop-types/prop-types.js"></script>
     <script src="./node_modules/ngreact/ngReact.js"></script>
     <script src="./dist/app.module.js"></script>
     <script src="./dist/components/accordion/accordion.js"></script>
